# FlatCAM-RS

./: .gitignore  CHANGELOG.md  Cargo.toml  FEATURES.md  PROJECT_STATUS.md  README.md
crates/fc-app/: Cargo.toml
crates/fc-app/src/: icons.rs  lib.rs  naming.rs  ordering.rs  preferences.rs  properties.rs  relations.rs  tree.rs
crates/fc-cam/: Cargo.toml
crates/fc-cam/src/: align.rs  array.rs  bridges.rs  calculators.rs  copper_pour.rs  cutout.rs  distance.rs  dogbone.rs  drc_extra.rs  drill_to_mill.rs  drilloptim.rs  etch.rs  extract.rs  fiducials.rs  film.rs  follow.rs  gcode_stats.rs  invert.rs  iso_multitool.rs  leadinout.rs  levelling.rs  levelmap.rs  lib.rs  markers.rs  milling.rs  ncc.rs  ncc_multitool.rs  optimal.rs  paint.rs  panel_extras.rs  panelize.rs  punch.rs  ramp.rs  report.rs  rulescheck.rs  scale_fit.rs  solderpaste.rs  spiral_pocket.rs  sub.rs  teardrops.rs  (+5 more)
crates/fc-cam/tests/: pipeline.rs
crates/fc-cli/: Cargo.toml
crates/fc-cli/src/: main.rs
crates/fc-dxf/: Cargo.toml
crates/fc-dxf/src/: lib.rs  nesting.rs  writer.rs
crates/fc-editor/: Cargo.toml
crates/fc-editor/src/: exc_editor.rs  gcode_editor.rs  geo_editor.rs  gerber_editor.rs  lib.rs
crates/fc-excellon/: Cargo.toml
crates/fc-excellon/src/: lib.rs  pcbwizard.rs  writer.rs
crates/fc-gcode/: Cargo.toml
crates/fc-gcode/src/: dialects.rs  dialects_eleks.rs  dialects_extra.rs  dialects_laser2.rs  dialects_more.rs  dialects_parity.rs  dialects_paste.rs  dialects_paste2.rs  lib.rs  optimize.rs  reader.rs
crates/fc-geo/: Cargo.toml
crates/fc-geo/src/: geom_utils.rs  hatch.rs  lib.rs  shapes.rs  triangulate.rs
crates/fc-gerber/: Cargo.toml
crates/fc-gerber/src/: attributes.rs  lib.rs  macro_primitives.rs  macros.rs  writer.rs
crates/fc-gui/: Cargo.toml
crates/fc-gui/src/: help.rs  icons.rs  lib.rs  main.rs  plugins.rs  preferences.rs  theme.rs  viewport.rs  widgets.rs
crates/fc-hpgl/: Cargo.toml
crates/fc-hpgl/src/: lib.rs
crates/fc-image/: Cargo.toml
crates/fc-image/src/: lib.rs
crates/fc-laser/: Cargo.toml
crates/fc-laser/src/: astig.rs  banding.rs  beam.rs  calcsv.rs  calfit.rs  calibration.rs  cam.rs  crosshatch.rs  densify.rs  emit.rs  emit_curve.rs  fill.rs  lib.rs  offset.rs  optimize.rs  polar.rs  powercurve.rs  raster.rs  simulate.rs
crates/fc-pdf/: Cargo.toml
crates/fc-pdf/src/: lib.rs  writer.rs
crates/fc-qr/: Cargo.toml
crates/fc-qr/src/: lib.rs
crates/fc-script/: Cargo.toml
crates/fc-script/src/: analyze_cmds.rs  build_cmds.rs  cam.rs  edit_cmds.rs  gen.rs  geo_ops.rs  io.rs  io_cmds.rs  lib.rs  more_cmds.rs  query.rs  select_cmds.rs  sys_cmds.rs  transform_cmds.rs
crates/fc-script/tests/: scripting.rs
crates/fc-svg/: Cargo.toml
crates/fc-svg/src/: lib.rs  writer.rs
docs/: AGENT_GUIDE.md  DESIGN.md  LASER_NOTES.md  ROADMAP.md  SCRIPTING.md  USER_GUIDE.md
examples/: demo.fcs  two_pads.drl  two_pads.gbr
