[workspace]
resolver = "2"
members = [
    "crates/fc-geo",
    "crates/fc-gerber",
    "crates/fc-excellon",
    "crates/fc-gcode",
    "crates/fc-cam",
    "crates/fc-cli",
    "crates/fc-gui",
    "crates/fc-svg",
    "crates/fc-app",
    "crates/fc-hpgl",
    "crates/fc-dxf",
    "crates/fc-editor",
    "crates/fc-script",
    "crates/fc-qr",
    "crates/fc-pdf",
    "crates/fc-laser",
    "crates/fc-image",
]
exclude = ["_nettest", "_dxfprobe", "_qrprobe", "_pdfprobe"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["FlatCAM-RS port"]
repository = "https://github.com/Deepankar1993/FlatCAM-Plus"

[workspace.dependencies]
geo = "0.29"
geo-buffer = "0.2"
regex = "1"
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
# Raster image decoding for fc-image (ToolImage port). Only the codecs we
# actually trace from PCB raster exports: PNG, JPEG and BMP.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }
# Pure-Rust LZMA/XZ codec for compressed project files in fc-app. No system
# liblzma required, so it builds cleanly on Windows MSVC.
lzma-rs = "0.3"

# Optimized release profile — the whole point of the Rust port is speed.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
