[package]
name = "fc-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "flatcam-rs"
path = "src/main.rs"

[dependencies]
fc-geo = { path = "../fc-geo" }
fc-gerber = { path = "../fc-gerber" }
fc-excellon = { path = "../fc-excellon" }
fc-gcode = { path = "../fc-gcode" }
fc-cam = { path = "../fc-cam" }
fc-svg = { path = "../fc-svg" }
fc-hpgl = { path = "../fc-hpgl" }
geo.workspace = true
anyhow.workspace = true
