[package]
name = "fc-gui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "flatcam-gui"
path = "src/main.rs"

[dependencies]
fc-geo = { path = "../fc-geo" }
fc-gerber = { path = "../fc-gerber" }
fc-excellon = { path = "../fc-excellon" }
fc-gcode = { path = "../fc-gcode" }
fc-cam = { path = "../fc-cam" }
fc-svg = { path = "../fc-svg" }
eframe = "0.29"
rfd = "0.15"
