[package]
name = "fc-script"
version.workspace = true
edition.workspace = true

[dependencies]
fc-geo = { path = "../fc-geo" }
fc-gerber = { path = "../fc-gerber" }
fc-excellon = { path = "../fc-excellon" }
fc-gcode = { path = "../fc-gcode" }
fc-cam = { path = "../fc-cam" }
fc-svg = { path = "../fc-svg" }
fc-dxf = { path = "../fc-dxf" }
geo.workspace = true
thiserror.workspace = true
